--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -382,7 +382,7 @@
 
         </LinearLayout>
 
-        <!-- Rewards Section with Full Width Dark Background -->
+        <!-- Rewards Section -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
